separate clean_tbl into country-year .dat files

--- a/clean-data/README.Rmd
+++ b/clean-data/README.Rmd
@@ -485,6 +485,22 @@ tbl %>%
   knitr::kable()
 ```
 
+Separate into different country-year `.dat` files for separate LG analysis.  There are 90 different country-year combinations.  We will save these files in `/output/country-year/`.
+
+```{r}
+tbl %>% 
+  mutate(country_year = paste0(COUNTRY, "-", ICCS_year)) %>% 
+  group_by(country_year) %>% 
+  group_walk(~ write_delim(.x, paste0("output/country-year/", .y$country_year, ".dat"), delim = ","))
+```
+
+Quick check files contain what we expect.
+
+```{r}
+all.equal(tbl %>% filter(COUNTRY == "AUS", ICCS_year == 1999) %>% mutate_if(is.integer, as.numeric),
+          read_delim("output/country-year/AUS-1999.dat", delim = ",") %>% mutate_if(is.integer, as.numeric))
+```
+
 
 ## Exporting final combined datafile
 
